fix project number parsing (ignore n° etc...)

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -15,7 +15,7 @@ subcontractorPath  = res/soustraitance.csv
 financialPath      = res/agf.csv
 
 # Declare output file
-accountingPath = adoo.accounting.csv
+accountingPath = res/output.csv
 
 # Declare predefined values
 salaryAccount  = 5000
