--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -18,8 +18,11 @@ financialPath      = res/agf.csv
 accountingPath = res/output.csv
 
 # Declare predefined values
-salaryAccount  = 5000
-journalId_S1   = __export__.account_journal_5
-journalId_S2   = __export__.account_journal_5
-periodId_S1    = __export__.account_period_10 
-PeriodId_S2    = __export__.account_period_10
+salaryAccountCode    = 5000
+socleAccountCode     = 34_45566
+projectAccountSuffix = 34_
+
+journalId_S1         = __export__.account_journal_5
+journalId_S2         = __export__.account_journal_5
+periodId_S1          = __export__.account_period_10 
+PeriodId_S2          = __export__.account_period_10
