--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -18,6 +18,8 @@ financialPath      = res/agf.csv
 accountingPath = res/output.csv
 
 # Declare predefined values
+academicS1Period     = 2015
+academicS2Period     = 2016
 salaryAccountCode    = 5000
 socleAccountCode     = 34_45566
 projectAccountSuffix = 34_
