--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -18,13 +18,15 @@ financialPath      = res/agf.csv
 accountingPath = res/output.csv
 
 # Declare predefined values
-academicS1Period     = 2015
-academicS2Period     = 2016
+academicPeriod_S1    = 2015
+journalId_S1         = __export__.account_journal_5
+periodId_S1          = __export__.account_period_10 
+
+academicPeriod_S2    = 2016
+journalId_S2         = __export__.account_journal_5
+PeriodId_S2          = __export__.account_period_10
+
 salaryAccountCode    = 5000
 socleAccountCode     = 34_45566
 projectAccountSuffix = 34_
 
-journalId_S1         = __export__.account_journal_5
-journalId_S2         = __export__.account_journal_5
-periodId_S1          = __export__.account_period_10 
-PeriodId_S2          = __export__.account_period_10
