date and close project included in logic

--- a/ch.hesge.cragsi/.settings/org.eclipse.core.resources.prefs
+++ b/ch.hesge.cragsi/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-encoding//res/fdc.csv=UTF-8
+encoding//res/Fichiers\ OXIBI\ 04\ 11\ 2015/old/fdc.csv=UTF-8
 encoding/res=UTF-8
