--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -3,30 +3,39 @@
 # CRAGSI configuration file
 #
 
-# Declare files to use in script
-accountPath        = res/plan.comptable.odoo.csv
-projectPath        = res/projets.csv
+# Files comming Odoo
+accountPath = res/plan.comptable.odoo.csv
+
+# Files comming FDC
 activityPath       = res/fdc.csv
 activityDetailPath = res/fdc.detail.csv
-pricePath          = res/tarif.hes.csv
-contributorPath    = res/collaborateurs.csv
-fundingPath        = res/financements.csv
-subcontractorPath  = res/soustraitance.csv
-financialPath      = res/agf.csv
 
-# Declare output file
+# Files comming from sagex
+projectPath      = res/export_projet.csv
+collaboratorPath = res/export_collaborateur.csv
+financialPath    = res/export_financement.csv
+partnerPath      = res/export_soustraitance.csv
+agfPath          = res/export_AGF.csv
+
+# Files specific to CRAGSI
+pricePath = res/tarif.hes.csv
+
+# output file
 accountingPath = res/output.csv
 
-# Declare predefined values
+# Academic semester S1
 academicPeriod_S1    = 2015
 journalId_S1         = __export__.account_journal_5
 periodId_S1          = __export__.account_period_10 
 
+# Academic semester S2
 academicPeriod_S2    = 2016
 journalId_S2         = __export__.account_journal_5
 PeriodId_S2          = __export__.account_period_10
 
-salaryAccountCode    = 5000
-socleAccountCode     = 34_45566
+# Account used to generate output
+salaryAccount        = 5000
+projectsAccount      = 3400
+socleAccount         = 34_45566
 projectAccountSuffix = 34_
 
