--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -3,14 +3,14 @@
 # CRAGSI configuration file
 #
 
-# Files comming Odoo
+# Files comming ODOO
 accountPath = res/plan.comptable.odoo.csv
 
 # Files comming FDC
 activityPath       = res/fdc.csv
 activityDetailPath = res/fdc.detail.csv
 
-# Files comming from sagex
+# Files comming from SAGEX
 projectPath      = res/export_projet.csv
 collaboratorPath = res/export_collaborateur.csv
 financialPath    = res/export_financement.csv
