full refactoring & cleaning

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -4,7 +4,7 @@
 #
 
 # Files comming ODOO
-accountPath = res/plan.comptable.odoo.csv
+accountPath2 = res/plan.comptable.odoo.csv
 
 # Files comming FDC
 activityPath       = res/fdc.csv
@@ -18,22 +18,20 @@ partnerPath      = res/export_soustraitance.csv
 agfPath          = res/export_AGF.csv
 
 # Files specific to CRAGSI
-pricePath = res/tarif.hes.csv
-
-# output file
+pricePath      = res/tarif.hes.csv
 accountingPath = res/output.csv
 
-# Academic semester S1
-academicPeriod_S1    = 2015
-journalId_S1         = __export__.account_journal_5
-periodId_S1          = __export__.account_period_10 
+# Academic first semester (S1)
+academicYear_S1 = 2015
+journalId_S1    = __export__.account_journal_5
+periodId_S1     = __export__.account_period_10
 
-# Academic semester S2
-academicPeriod_S2    = 2016
-journalId_S2         = __export__.account_journal_5
-PeriodId_S2          = __export__.account_period_10
+# Academic second semester (S2)
+academicYear_S2 = 2016
+journalId_S2    = __export__.account_journal_5
+periodId_S2     = __export__.account_period_10
 
-# Account used to generate output
+# Predefined accounts
 salaryAccount        = 5000
 projectsAccount      = 3400
 socleAccount         = 34_45566
