end of refactoring + log4j 2 added

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -4,7 +4,7 @@
 #
 
 # Files comming ODOO
-accountPath2 = res/plan.comptable.odoo.csv
+accountPath = res/plan.comptable.odoo.csv
 
 # Files comming FDC
 activityPath       = res/fdc.csv
