--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -4,7 +4,7 @@
 #
 
 # Files comming ODOO
-accountPath = res/plan.comptable.odoo.csv
+accountPath = res/account.account_plan_comptable.csv
 
 # Files comming FDC
 activityPath       = res/fdc.csv
@@ -17,6 +17,7 @@ financialPath    = res/export_financement.csv
 partnerPath      = res/export_soustraitance.csv
 agfPath          = res/export_AGF.csv
 
+
 # Files specific to CRAGSI
 pricePath      = res/tarif.hes.csv
 accountingPath = res/output.csv
@@ -24,12 +25,12 @@ accountingPath = res/output.csv
 # Academic first semester (S1)
 academicYear_S1 = 2015
 journalId_S1    = __export__.account_journal_5
-periodId_S1     = __export__.account_period_10
+periodId_S1     = __export__.account_period_18
 
 # Academic second semester (S2)
 academicYear_S2 = 2016
 journalId_S2    = __export__.account_journal_5
-periodId_S2     = __export__.account_period_10
+periodId_S2     = __export__.account_period_19
 
 # Predefined accounts
 salaryAccount        = 5000
