added ant script

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -4,23 +4,24 @@
 #
 
 # Files comming ODOO
-accountPath = res/account.account_plan_comptable.csv
+accountPath = res/in/account.account_plan_comptable.csv
 
 # Files comming FDC
-activityPath       = res/fdc.csv
-activityDetailPath = res/fdc.detail.csv
+activityPath       = res/in/fdc.csv
+activityDetailPath = res/in/fdc.detail.csv
 
 # Files comming from SAGEX
-projectPath      = res/export_projet.csv
-collaboratorPath = res/export_collaborateur.csv
-financialPath    = res/export_financement.csv
-partnerPath      = res/export_soustraitance.csv
-agfPath          = res/export_AGF.csv
-
+projectPath      = res/in/export_projet.csv
+collaboratorPath = res/in/export_collaborateur.csv
+financialPath    = res/in/export_financement.csv
+partnerPath      = res/in/export_soustraitance.csv
+agfPath          = res/in/export_AGF.csv
 
 # Files specific to CRAGSI
-pricePath      = res/tarif.hes.csv
-accountingPath = res/output.csv
+pricePath      = res/in/tarif.hes.csv
+
+# Output file name
+accountingPath = res/out/movements.csv
 
 # Academic first semester (S1)
 academicYear_S1 = 2015
