added new accountings from odoo + change log format

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -4,7 +4,7 @@
 #
 
 # Files comming ODOO
-accountPath = res/in/account.account_plan_comptable.csv
+accountPath = res/in/account.account_plan_comptable_13_11_2015.csv
 
 # Files comming FDC
 activityPath       = res/in/fdc.csv
@@ -21,7 +21,7 @@ agfPath          = res/in/export_AGF.csv
 pricePath      = res/in/tarif.hes.csv
 
 # Output file name
-accountingPath = res/out/movements.csv
+accountingPath = res/out/output.csv
 
 # Academic first semester (S1)
 academicYear_S1 = 2015
@@ -36,6 +36,6 @@ periodId_S2     = __export__.account_period_19
 # Predefined accounts
 salaryAccount        = 5000
 projectsAccount      = 3400
-socleAccount         = 34_45566
+socleAccount         = 34_99999
 projectAccountSuffix = 34_
 
