added queries to access

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -3,6 +3,8 @@
 # CRAGSI configuration file
 #
 
+schoolCode = HEG,GE
+
 # Files comming ODOO
 accountPath = res/in/account.account_plan_comptable_13_11_2015.csv
 
@@ -24,12 +26,10 @@ pricePath      = res/in/tarif.hes.csv
 accountingPath = res/out/output.csv
 
 # Academic first semester (S1)
-academicYear_S1 = 2015
 journalId_S1    = __export__.account_journal_5
 periodId_S1     = __export__.account_period_18
 
 # Academic second semester (S2)
-academicYear_S2 = 2016
 journalId_S2    = __export__.account_journal_5
 periodId_S2     = __export__.account_period_19
 
