switch input file to database (access)

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -3,8 +3,6 @@
 # CRAGSI configuration file
 #
 
-schoolCode = HEG,GE
-
 # Files comming ODOO
 accountPath = res/in/account.account_plan_comptable_13_11_2015.csv
 
@@ -12,15 +10,11 @@ accountPath = res/in/account.account_plan_comptable_13_11_2015.csv
 activityPath       = res/in/fdc.csv
 activityDetailPath = res/in/fdc.detail.csv
 
-# Files comming from SAGEX
-projectPath      = res/in/export_projet.csv
-collaboratorPath = res/in/export_collaborateur.csv
-financialPath    = res/in/export_financement.csv
-partnerPath      = res/in/export_soustraitance.csv
-agfPath          = res/in/export_AGF.csv
-
 # Files specific to CRAGSI
 pricePath      = res/in/tarif.hes.csv
+
+# SAGEX database file
+mdbPath = C:/DATA/Projects/cragsi/sagex/4_20151117_400_expOLAP.mdb
 
 # Output file name
 accountingPath = res/out/output.csv
