--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -3,22 +3,6 @@
 # CRAGSI configuration file
 #
 
-# Files comming ODOO
-accountPath = res/in/account.account_plan_comptable_13_11_2015.csv
-
-# Files comming FDC
-activityPath       = res/in/fdc.csv
-activityDetailPath = res/in/fdc.detail.csv
-
-# Files specific to CRAGSI
-pricePath      = res/in/tarif.hes.csv
-
-# SAGEX database file
-mdbPath = C:/DATA/Projects/cragsi/sagex/4_20151117_400_expOLAP.mdb
-
-# Output file name
-accountingPath = res/out/output.csv
-
 # Academic first semester (S1)
 journalId_S1    = __export__.account_journal_5
 periodId_S1     = __export__.account_period_18
@@ -26,6 +10,20 @@ periodId_S1     = __export__.account_period_18
 # Academic second semester (S2)
 journalId_S2    = __export__.account_journal_5
 periodId_S2     = __export__.account_period_19
+
+# Files used by loader
+accountingPath     = res/out/output.csv
+activityPath       = res/in/fdc.csv
+activityDetailPath = res/in/fdc.detail.csv
+pricePath          = res/in/tarif.hes.csv
+accountPath        = res/in/account.account_plan_comptable_13_11_2015.csv
+mdbPath            = C:/DATA/Projects/cragsi/4_20151117_400_expOLAP.mdb
+
+# Queries used to access mdb file
+AFG_QUERY       = SELECT AGFDATE, IDPROJECTHESSO, AGF, AGFAMOUNT FROM MV2_AGF INNER JOIN MV2_PROJECT ON MV2_AGF.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE IDSCHOOL=7
+FINANCIAL_QUERY = SELECT PRESTATIONSTARTDATE, IDPROJECTHESSO, PARTNERNAME, PROJECTFINANCIALAMOUNT FROM (MV2_PROJECT INNER JOIN MV2_FINANCIALPRESTATION ON MV2_PROJECT.IDPROJECT = MV2_FINANCIALPRESTATION.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_FINANCIALPRESTATION.IDPROJECTPARTNERSOURCE = MV2_PROJECTPARTNER.IDPROJECTPARTNER WHERE MV2_PROJECT.IDSCHOOL=7
+PARTNER_QUERY   = SELECT OUTSOURCINGSTARTDATE, IDPROJECTHESSO, PARTNERNAME, OUTSOURCINGREMARK, OUTSOURCINGAMOUNT FROM (MV2_OUTSOURCING INNER JOIN MV2_PROJECT ON MV2_OUTSOURCING.IDPROJECT = MV2_PROJECT.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_OUTSOURCING.IDPROJECTPARTNEROUTSOURCED = MV2_PROJECTPARTNER.IDPROJECTPARTNEROUTSOURCED WHERE MV2_PROJECT.IDSCHOOL=7
+PROJECT_QUERY   = SELECT IDPROJECTHESSO, PROJECTENVSTARTDATE, PROJECTENVENDDATE, PROJECTTITLE FROM MV2_PROJECT WHERE IDSCHOOL=7
 
 # Predefined accounts
 salaryAccount        = 5000
