--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -20,7 +20,7 @@ accountPath        = res/in/account.account_plan_comptable_13_11_2015.csv
 mdbPath            = C:/DATA/Projects/cragsi/4_20151117_400_expOLAP.mdb
 
 # Queries used to access mdb file
-AFG_QUERY       = SELECT AGFDATE, IDPROJECTHESSO, AGF, AGFAMOUNT FROM MV2_AGF INNER JOIN MV2_PROJECT ON MV2_AGF.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE IDSCHOOL=7
+AGF_QUERY       = SELECT AGFDATE, IDPROJECTHESSO, AGF, AGFAMOUNT FROM MV2_AGF INNER JOIN MV2_PROJECT ON MV2_AGF.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE IDSCHOOL=7
 FINANCIAL_QUERY = SELECT PRESTATIONSTARTDATE, IDPROJECTHESSO, PARTNERNAME, PROJECTFINANCIALAMOUNT FROM (MV2_PROJECT INNER JOIN MV2_FINANCIALPRESTATION ON MV2_PROJECT.IDPROJECT = MV2_FINANCIALPRESTATION.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_FINANCIALPRESTATION.IDPROJECTPARTNERSOURCE = MV2_PROJECTPARTNER.IDPROJECTPARTNER WHERE MV2_PROJECT.IDSCHOOL=7
 PARTNER_QUERY   = SELECT OUTSOURCINGSTARTDATE, IDPROJECTHESSO, PARTNERNAME, OUTSOURCINGREMARK, OUTSOURCINGAMOUNT FROM (MV2_OUTSOURCING INNER JOIN MV2_PROJECT ON MV2_OUTSOURCING.IDPROJECT = MV2_PROJECT.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_OUTSOURCING.IDPROJECTPARTNEROUTSOURCED = MV2_PROJECTPARTNER.IDPROJECTPARTNEROUTSOURCED WHERE MV2_PROJECT.IDSCHOOL=7
 PROJECT_QUERY   = SELECT IDPROJECTHESSO, PROJECTENVSTARTDATE, PROJECTENVENDDATE, PROJECTTITLE FROM MV2_PROJECT WHERE IDSCHOOL=7
