added check for collaborator account code (must start with 50_)

--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -29,5 +29,6 @@ PROJECT_QUERY   = SELECT IDPROJECTHESSO, PROJECTENVSTARTDATE, PROJECTENVENDDATE,
 salaryAccount        = 5000
 projectsAccount      = 3400
 socleAccount         = 34_99999
-projectAccountSuffix = 34_
+projectAccountSuffix      = 34_
+collaboratorAccountSuffix = 50_
 
