--- a/ch.hesge.cragsi/conf/craigsi.conf
+++ b/ch.hesge.cragsi/conf/craigsi.conf
@@ -12,18 +12,19 @@ journalId_S2    = __export__.account_journal_5
 periodId_S2     = __export__.account_period_19
 
 # Files used by loader
-accountingPath     = res/out/output.csv
 activityPath       = res/in/fdc.csv
 activityDetailPath = res/in/fdc.detail.csv
 pricePath          = res/in/tarif.hes.csv
 accountPath        = res/in/account.account_plan_comptable_13_11_2015.csv
-mdbPath            = C:/DATA/Projects/cragsi/4_20151117_400_expOLAP.mdb
+mdbPath            = C:/Users/Eric Harth/Documents/projects/cragsi/sagex/4_20151117_400_expOLAP.mdb
+accountingPath     = res/out/output.csv
 
 # Queries used to access mdb file
-AGF_QUERY       = SELECT AGFDATE, IDPROJECTHESSO, AGF, AGFAMOUNT FROM MV2_AGF INNER JOIN MV2_PROJECT ON MV2_AGF.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE IDSCHOOL=7
-FINANCIAL_QUERY = SELECT PRESTATIONSTARTDATE, IDPROJECTHESSO, PARTNERNAME, PROJECTFINANCIALAMOUNT FROM (MV2_PROJECT INNER JOIN MV2_FINANCIALPRESTATION ON MV2_PROJECT.IDPROJECT = MV2_FINANCIALPRESTATION.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_FINANCIALPRESTATION.IDPROJECTPARTNERSOURCE = MV2_PROJECTPARTNER.IDPROJECTPARTNER WHERE MV2_PROJECT.IDSCHOOL=7
-PARTNER_QUERY   = SELECT OUTSOURCINGSTARTDATE, IDPROJECTHESSO, PARTNERNAME, OUTSOURCINGREMARK, OUTSOURCINGAMOUNT FROM (MV2_OUTSOURCING INNER JOIN MV2_PROJECT ON MV2_OUTSOURCING.IDPROJECT = MV2_PROJECT.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_OUTSOURCING.IDPROJECTPARTNEROUTSOURCED = MV2_PROJECTPARTNER.IDPROJECTPARTNEROUTSOURCED WHERE MV2_PROJECT.IDSCHOOL=7
-PROJECT_QUERY   = SELECT IDPROJECTHESSO, PROJECTENVSTARTDATE, PROJECTENVENDDATE, PROJECTTITLE FROM MV2_PROJECT WHERE IDSCHOOL=7
+AGF_QUERY          = SELECT AGFDATE, IDPROJECTHESSO, AGF, AGFAMOUNT FROM MV2_AGF INNER JOIN MV2_PROJECT ON MV2_AGF.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE IDSCHOOL=7
+FINANCIAL_QUERY    = SELECT PRESTATIONSTARTDATE, IDPROJECTHESSO, PARTNERNAME, PROJECTFINANCIALAMOUNT FROM (MV2_PROJECT INNER JOIN MV2_FINANCIALPRESTATION ON MV2_PROJECT.IDPROJECT = MV2_FINANCIALPRESTATION.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_FINANCIALPRESTATION.IDPROJECTPARTNERSOURCE = MV2_PROJECTPARTNER.IDPROJECTPARTNER WHERE MV2_PROJECT.IDSCHOOL=7
+PARTNER_QUERY      = SELECT OUTSOURCINGSTARTDATE, IDPROJECTHESSO, PARTNERNAME, OUTSOURCINGREMARK, OUTSOURCINGAMOUNT FROM (MV2_OUTSOURCING INNER JOIN MV2_PROJECT ON MV2_OUTSOURCING.IDPROJECT = MV2_PROJECT.IDPROJECT) INNER JOIN MV2_PROJECTPARTNER ON MV2_OUTSOURCING.IDPROJECTPARTNEROUTSOURCED = MV2_PROJECTPARTNER.IDPROJECTPARTNEROUTSOURCED WHERE MV2_PROJECT.IDSCHOOL=7
+PROJECT_QUERY      = SELECT IDPROJECTHESSO, PROJECTENVSTARTDATE, PROJECTENVENDDATE, PROJECTTITLE FROM MV2_PROJECT WHERE IDSCHOOL=7
+COLLABORATOR_QUERY = SELECT MV2_AFFECT.AFFECTSTARTDATE, MV2_PROJECT.IDPROJECTHESSO, MV2_AFFECT.IDCOLLABORATOR, MV2_COLLABORATOR.IDGESTAC, MV2_COLLABORATOR.COLLABORATORNAME, MV2_COLLABORATOR.COLLABORATORFIRSTNAME, MV2_COLLABORATOR.COLLABORATORCATEGORY, MV2_AFFECT.AFFECTRATE FROM (MV2_AFFECT INNER JOIN MV2_COLLABORATOR ON MV2_AFFECT.IDCOLLABORATOR = MV2_COLLABORATOR.IDCOLLABORATOR) INNER JOIN MV2_PROJECT ON MV2_AFFECT.IDPROJECT = MV2_PROJECT.IDPROJECT WHERE MV2_COLLABORATOR.IDSCHOOL=7
 
 # Predefined accounts
 salaryAccount        = 5000
